## v1.1.0

* Update discord-api-types dependency

## v1.0.0

* Setup