@@ -1,5 +1,6 @@
 ## v1.1.0
 
+* Add ecosystem config for pm2
 * Update discord-api-types dependency
 
 ## v1.0.0
